@@ -93,6 +93,7 @@ Bug fixes:
 * PR#6664: Crash when finalising lazy values of the wrong type.
   (Damien Doligez)
 - PR#6744: Univars can escape through polymorphic variants (partial fix)
+- PR#6776: Failure to kill the "tick" thread, segfault when exiting the runtime
 - PR#6752: Extensible variant types and scope escaping
 
 Features wishes:
